--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,6 +3,8 @@ name: Windows RDP with Ngrok
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  # Also trigger on push events
+  push:
 
 jobs:
   build:
@@ -13,11 +15,12 @@ jobs:
 
     steps:
     # FIX: Combined download, extract, and auth into one step to guarantee correct path.
-    - name: Download, Extract, and Authenticate ngrok
+    - name: Download, Extract, and Authenticate ngrok (Asia Pacific Region)
       run: |
         Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
         Expand-Archive ngrok.zip
-        .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+        # Authenticate and set region to Asia Pacific (ap)
+        .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN --region ap
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         
@@ -33,7 +36,30 @@ jobs:
         $password = ConvertTo-SecureString -String "${{ secrets.RDP_PASSWORD }}" -AsPlainText -Force
         Set-LocalUser -Name "runneradmin" -Password $password
 
-    - name: Start RDP Tunnel
-      # This command will run until the job times out, keeping the tunnel open.
-      # The ngrok.exe is now correctly referenced in the root of the workspace.
-      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Start Ngrok Tunnel in Background
+      run: |
+        # Start ngrok, targetting TCP 3389, using the Asia Pacific region, running in the background.
+        Start-Process -FilePath ".\ngrok\ngrok.exe" -ArgumentList "tcp 3389 --region ap" -NoNewWindow
+        # Wait a few seconds for the tunnel to establish
+        Start-Sleep -Seconds 5
+        
+    - name: Log Ngrok Tunnel IP and Credentials
+      run: |
+        # Query the local ngrok API (port 4040) to get the public URL
+        $tunnels = Invoke-RestMethod -Uri http://127.0.0.1:4040/api/tunnels
+        $rdp_url = $tunnels.tunnels[0].public_url
+
+        Write-Host "::notice title=RDP Connection Established::"
+        Write-Host "::notice::"
+        Write-Host "::notice::-----------------------------------------------------"
+        Write-Host "::notice::RDP ADDRESS: $rdp_url"
+        Write-Host "::notice::USERNAME: runneradmin"
+        Write-Host "::notice::PASSWORD: ${{ secrets.RDP_PASSWORD }}"
+        Write-Host "::notice::-----------------------------------------------------"
+        Write-Host "::notice::"
+
+    - name: Keep Job Alive
+      # Since ngrok is running in the background, we use an infinite loop to prevent the job from exiting
+      run: |
+        Write-Host "Keeping the job alive for 360 minutes..."
+        while ($true) { Start-Sleep -Seconds 60 }
