--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
         Expand-Archive ngrok.zip
-        # FIX: Removed deprecated --region flag
+        # Authenticate token (ngrok v3 automatically configures region)
         .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
@@ -30,23 +30,44 @@ jobs:
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
         
     - name: Set RDP User Password
-      # Sets the password for the default 'runneradmin' user
       run: |
         $password = ConvertTo-SecureString -String "${{ secrets.RDP_PASSWORD }}" -AsPlainText -Force
         Set-LocalUser -Name "runneradmin" -Password $password
 
     - name: Start Ngrok Tunnel in Background
       run: |
-        # FIX: Removed deprecated --region flag. Ngrok defaults to lowest latency or uses region from ngrok.yml if configured manually.
+        # Start ngrok targeting TCP 3389 in the background.
         Start-Process -FilePath ".\ngrok\ngrok.exe" -ArgumentList "tcp 3389" -NoNewWindow
-        # Increased sleep time to ensure the API is fully ready
-        Start-Sleep -Seconds 10 
         
-    - name: Log Ngrok Tunnel IP and Credentials
+    - name: Wait for and Log Ngrok Tunnel IP and Credentials
       run: |
-        # Query the local ngrok API (port 4040) to get the public URL
-        $tunnels = Invoke-RestMethod -Uri http://127.0.0.1:4040/api/tunnels
-        # Access the first tunnel's public URL
+        $api_url = "http://127.0.0.1:4040/api/tunnels"
+        $max_attempts = 15 # Wait up to 15 attempts (75 seconds)
+        $attempt = 0
+        $tunnels = $null
+
+        # Implement polling logic to wait for the ngrok API to become available
+        do {
+            $attempt++
+            Write-Host "Attempting to connect to ngrok API... (Attempt $attempt of $max_attempts)"
+            
+            try {
+                # Try connecting. If it fails, the catch block runs.
+                $tunnels = Invoke-RestMethod -Uri $api_url -ErrorAction Stop
+                Write-Host "Ngrok API connected successfully."
+                break
+            }
+            catch {
+                if ($attempt -ge $max_attempts) {
+                    Write-Error "Failed to connect to ngrok API after $max_attempts attempts. Exiting."
+                    exit 1
+                }
+                # Wait 5 seconds before retrying
+                Start-Sleep -Seconds 5
+            }
+        } while ($tunnels -eq $null)
+
+        # Proceed with logging if connection was successful
         $rdp_url = $tunnels.tunnels[0].public_url
 
         Write-Host "::notice title=RDP Connection Established::"
