--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,99 +1,42 @@
 name: Windows RDP with Ngrok
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  # Also trigger on push events
   push:
 
 jobs:
   build:
     runs-on: windows-latest
-    
-    # Max timeout for GitHub-hosted runners is 6 hours (360 minutes)
     timeout-minutes: 360
 
     steps:
-    - name: Download, Extract, and Configure ngrok (Asia Pacific Region)
+    - name: Setup Ngrok (Asia Pacific)
       run: |
-        # Define paths
-        $ngrokDir = ".\ngrok"
-        $ngrokExe = "$ngrokDir\ngrok.exe"
-        $configFile = "$Env:USERPROFILE\AppData\Local\ngrok\ngrok.yml"
-
-        # 1. Download and Extract
         Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
         Expand-Archive ngrok.zip
-        
-        # 2. Authenticate
-        & $ngrokExe authtoken $Env:NGROK_AUTH_TOKEN
-        
-        # 3. Explicitly set region to Asia Pacific (AP) in the config file
-        $configPath = Split-Path $configFile -Parent
-        if (-not (Test-Path $configPath)) { New-Item -Path $configPath -ItemType Directory -Force }
-        
-        # Write the region setting directly to the ngrok YAML configuration file
+        .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+        # Force Asia Pacific region in config file
+        $configFile = "$Env:USERPROFILE\AppData\Local\ngrok\ngrok.yml"
+        if (-not (Test-Path (Split-Path $configFile))) { New-Item -Path (Split-Path $configFile) -ItemType Directory -Force }
         @("version: 2", "region: ap") | Out-File $configFile -Encoding UTF8 -Append
-        
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-        
-    - name: Configure Windows Remote Desktop
+
+    - name: Setup RDP
       run: |
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
         Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-        
-    - name: Set RDP User Password
-      run: |
         $password = ConvertTo-SecureString -String "${{ secrets.RDP_PASSWORD }}" -AsPlainText -Force
         Set-LocalUser -Name "runneradmin" -Password $password
 
-    - name: Start Ngrok Tunnel in Background
-      run: |
-        # Start ngrok using the configuration file settings
-        Start-Process -FilePath ".\ngrok\ngrok.exe" -ArgumentList "tcp 3389" -NoNewWindow
-        
-    - name: Wait for and Print Raw Curl Output
-      run: |
-        $api_url = "http://127.0.0.1:4040/api/tunnels"
-        $max_attempts = 15 # Wait up to 75 seconds total
-        $attempt = 0
+    - name: Start Ngrok
+      run: Start-Process -FilePath ".\ngrok\ngrok.exe" -ArgumentList "tcp 3389" -NoNewWindow
 
-        Write-Host "::notice title=Starting Tunnel::Waiting for ngrok API to respond..."
-
-        # Implement polling logic using curl.exe
-        do {
-            $attempt++
-            Write-Host "Attempt $attempt of $max_attempts..."
-            
-            try {
-                # Execute curl.exe and capture the raw output string
-                # -s (silent), -S (show errors on failure), --fail (fail silently on >400 status)
-                $json_output = & curl.exe $api_url -s -S --fail 2>$null
-                
-                # If curl succeeded and returned data, print it and break the loop
-                if ($json_output) {
-                    Write-Host "::notice title=Ngrok API Response::Tunnel information logged below (find 'public_url'):"
-                    Write-Host $json_output
-                    break # Success! Exit loop
-                }
-            }
-            catch {
-                # Handles connection refusal or HTTP failure if curl throws an exception
-                Write-Host "Connection failed or returned empty data."
-            }
-            
-            # Check maximum attempts and wait
-            if ($attempt -ge $max_attempts) {
-                Write-Error "Failed to get response from ngrok API after $max_attempts attempts. Exiting."
-                exit 1
-            }
-            Start-Sleep -Seconds 5
-        } while ($true) 
+    - name: Get Ngrok Info
+      run: |
+        Start-Sleep -Seconds 10
+        curl.exe http://127.0.0.1:4040/api/tunnels
 
     - name: Keep Job Alive
-      # Use infinite loop to hold the runner open
-      run: |
-        Write-Host "::notice title=Job Active::Keeping the job alive for 360 minutes. Use the information above to connect."
-        while ($true) { Start-Sleep -Seconds 60 }
+      run: while ($true) { Start-Sleep -Seconds 60 }
