--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,11 @@
 name: Windows RDP with Ngrok
-
 on:
   workflow_dispatch:
   push:
-
 jobs:
   build:
     runs-on: windows-latest
     timeout-minutes: 360
-
     steps:
     - name: Setup Ngrok (Asia Pacific)
       run: |
@@ -21,7 +18,7 @@ jobs:
         @("version: 2", "region: ap") | Out-File $configFile -Encoding UTF8 -Append
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-
+    
     - name: Setup RDP
       run: |
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -Value 0
@@ -29,14 +26,39 @@ jobs:
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
         $password = ConvertTo-SecureString -String "${{ secrets.RDP_PASSWORD }}" -AsPlainText -Force
         Set-LocalUser -Name "runneradmin" -Password $password
-
+    
     - name: Start Ngrok
       run: Start-Process -FilePath ".\ngrok\ngrok.exe" -ArgumentList "tcp 3389" -NoNewWindow
-
+    
     - name: Get Ngrok Info
       run: |
-        Start-Sleep -Seconds 10
-        curl.exe http://127.0.0.1:4040/api/tunnels
-
+        Write-Host "Waiting for ngrok API to be ready..."
+        $maxAttempts = 30
+        $attempt = 0
+        $success = $false
+        
+        while ($attempt -lt $maxAttempts -and -not $success) {
+          try {
+            $response = curl.exe -s http://127.0.0.1:4040/api/tunnels
+            if ($LASTEXITCODE -eq 0 -and $response) {
+              Write-Host "Ngrok API is ready!"
+              Write-Host $response
+              $success = $true
+            }
+          } catch {
+            Write-Host "Attempt $($attempt + 1): API not ready yet..."
+          }
+          
+          if (-not $success) {
+            Start-Sleep -Seconds 2
+            $attempt++
+          }
+        }
+        
+        if (-not $success) {
+          Write-Host "ERROR: Ngrok API failed to start after $maxAttempts attempts"
+          exit 1
+        }
+    
     - name: Keep Job Alive
       run: while ($true) { Start-Sleep -Seconds 60 }
